United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6986028 assert(_base == Int) failed: Not an Int in CmpINode::sub
6986028 : assert(_base == Int) failed: Not an Int in CmpINode::sub

Details
Type:
Bug
Submit Date:
2010-09-20
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs19
Fixed Versions:
hs20

Related Reports
Backport:
Backport:
Backport:
Backport:

Sub Tasks

Description
Application crashes on startup (linux-amd64, fastdebug VM, -XX:+AggressiveOpts):

#  Internal Error (/BUILD_AREA/jdk7/hotspot/src/share/vm/opto/type.hpp:1061), pid=3077, tid=139772749469968
#  assert(_base == Int) failed: Not an Int

V  [libjvm.so+0xa9d54c];;  VMError::report(outputStream*)+0x116c
V  [libjvm.so+0xa9d91c];;  VMError::report_and_die()+0x2dc
V  [libjvm.so+0x4b7304];;  report_vm_error(char const*, int, char const*, char const*)+0x84
V  [libjvm.so+0x9dd2e2];;  CmpINode::sub(Type const*, Type const*) const+0x32
V  [libjvm.so+0x907963];;  PhaseGVN::transform_no_reclaim(Node*)+0xd3
V  [libjvm.so+0x9beab1];;  PhaseStringOpts::int_stringSize(GraphKit&, Node*)+0x101
V  [libjvm.so+0x9c39af];;  PhaseStringOpts::replace_string_concat(StringConcat*)+0x9cf
V  [libjvm.so+0x9c4dfc];;  PhaseStringOpts::PhaseStringOpts(PhaseGVN*, Unique_Node_List*)+0x67c
V  [libjvm.so+0x446b0d];;  Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool)+0x123d
V  [libjvm.so+0x362b1f];;  C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x21f
V  [libjvm.so+0x44ddad];;  CompileBroker::invoke_compiler_on_method(CompileTask*)+0x41d
V  [libjvm.so+0x44e92d];;  CompileBroker::compiler_thread_loop()+0x4cd
V  [libjvm.so+0xa42886];;  JavaThread::thread_main_inner()+0xf6
V  [libjvm.so+0x8b1920];;  java_start(Thread*)+0xf0


Current CompileTask:
C2:6079      spec.jbb.JBBProperties.copyPropsToOutput(Ljava/io/PrintStream;)Z (566 bytes)

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/c40600e85311
                                     
2010-10-09
EVALUATION

http://hg.openjdk.java.net/hsx/hsx19/baseline/rev/bda2024ae52b
                                     
2010-10-08
EVALUATION

6986028: assert(_base == Int) failed: Not an Int in CmpINode::sub
Reviewed-by: kvn, twisti

One of the places where a method is being matched wasn't checking the
signature so it picked up an argument of the wrong type which resulted
in errors when we tried to do math on it.  I changed it to use the
intrinsic id and fixed a couple others to also use the intrinsic id.
I checked the other sites to make sure they were checking the
signature as well and added non static as well.  Tested with failing
test from report.
                                     
2010-09-30
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/c40600e85311
                                     
2010-09-23
EVALUATION

Can you give me a command to reproduce it or access to the machine so I can look at the core?  The machine listed as the host appears to be running windows now.
                                     
2010-09-20



Hardware and Software, Engineered to Work Together