6986028: assert(_base == Int) failed: Not an Int in CmpINode::sub

Reviewed-by: kvn, twisti